common/identity-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: identity
  name: identity
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: identity
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/dmz: "true"
        io.kompose.service: identity
    spec:
      containers:
        - env:
            - name: DB_VENDOR
              value: h2
            - name: JAVA_OPTS
              value: -Djboss.bind.address.private=[::1] -Djboss.bind.address=[::1] -Djava.net.preferIPv6Addresses=true -Djava.net.preferIPv4Stack=false
            - name: KEYCLOAK_PASSWORD
            - name: KEYCLOAK_USER
          image: identity
          name: identity
          ports:
            - containerPort: 8443
          resources: {}
      restartPolicy: Always
status: {}
