common/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/smo: "true"
        io.kompose.service: kafka
    spec:
      containers:
        - env:
            - name: KAFKA_ADVERTISED_LISTENERS
              value: INTERNAL_PLAINTEXT://kafka:9092
            - name: KAFKA_CONFLUENT_SUPPORT_METRICS_ENABLE
              value: "false"
            - name: KAFKA_INTER_BROKER_LISTENER_NAME
              value: INTERNAL_PLAINTEXT
            - name: KAFKA_LISTENERS
              value: INTERNAL_PLAINTEXT://0.0.0.0:9092
            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
              value: INTERNAL_PLAINTEXT:PLAINTEXT,EXTERNAL_PLAINTEXT:PLAINTEXT
            - name: KAFKA_OFFSETS_TOPIC_NUM_PARTITIONS
              value: "1"
            - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_OPTS
              value: -Djava.security.auth.login.config=/etc/kafka/secrets/jaas/zk_client_jaas.conf
            - name: KAFKA_ZOOKEEPER_CONNECT
              value: zookeeper:2181
            - name: KAFKA_ZOOKEEPER_CONNECTION_TIMEOUT_MS
              value: "40000"
            - name: KAFKA_ZOOKEEPER_SESSION_TIMEOUT_MS
              value: "40000"
            - name: KAFKA_ZOOKEEPER_SET_ACL
              value: "true"
            - name: enableCadi
              value: "false"
          image: kafka
          name: kafka
          ports:
            - containerPort: 9092
          resources: {}
          volumeMounts:
            - mountPath: /etc/kafka/secrets/jaas/zk_client_jaas.conf
              name: kafka-claim0
      restartPolicy: Always
      volumes:
        - name: kafka-claim0
          persistentVolumeClaim:
            claimName: kafka-claim0
status: {}
