common/persistence-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: persistence
  name: persistence
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: persistence
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/smo: "true"
        io.kompose.service: persistence
    spec:
      containers:
        - env:
            - name: discovery.type
              value: single-node
          image: persistence
          name: persistence
          resources: {}
      restartPolicy: Always
status: {}
