common/identity-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: identity
  name: identity
spec:
  ports:
    - name: "8443"
      port: 8443
      targetPort: 8443
  selector:
    io.kompose.service: identity
status:
  loadBalancer: {}
