common/smo-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: smo
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/smo: "true"
  podSelector:
    matchLabels:
      io.kompose.network/smo: "true"
